--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js"
+    "start": "nodemon -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
